<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_ll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/text_white_common"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/title1_ll"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_viewpager_title_height"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_text1"
            style="@style/list_viewpager_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/institution_list_tab_rank"
            android:textColor="@color/text_black_common" />

        <ImageView
            android:id="@+id/title_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:src="@drawable/img_customer_click_head_btn_normal" />
    </LinearLayout>

    <View style="@style/line_vertical_common" />

    <LinearLayout
        android:id="@+id/title2_ll"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_viewpager_title_height"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_text2"
            style="@style/list_viewpager_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/institution_list_tab_income"
            android:textColor="@color/text_black_common" />

        <ImageView
            android:id="@+id/title_img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:src="@drawable/img_customer_click_head_btn_normal" />
    </LinearLayout>

    <View style="@style/line_vertical_common" />

    <LinearLayout
        android:id="@+id/title3_ll"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_viewpager_title_height"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_text3"
            style="@style/list_viewpager_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/institution_list_tab_date"
            android:textColor="@color/text_black_common" />

        <ImageView

            android:id="@+id/title_img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:src="@drawable/img_customer_click_head_btn_normal" />
    </LinearLayout>

    <!---->


</LinearLayout>