<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroud_common"
                android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mine_info_avatar_rl"
            style="@style/linearlayout_item_common"
            android:layout_height="62dp"
            android:layout_marginRight="0dp">

            <TextView
                style="@style/text_custom_item_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/avatar"/>

            <!--<ImageView-->
            <!--android:id="@+id/mine_info_avatar_go_right"-->
            <!--style="@style/mine_sign_go_right"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:contentDescription="@string/app_name"-->
            <!--android:visibility="invisible"-->
            <!--/>-->

            <org.xsl781.ui.view.RoundImageView
                android:id="@+id/mine_img_user_face"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="6dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/img_customer_face_default"/>
        </RelativeLayout>

        <View
            style="@style/line_horizontal_common"/>


        <RelativeLayout
            style="@style/linearlayout_item_common">

            <TextView
                style="@style/text_custom_item_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/phone"/>

            <TextView
                android:id="@+id/mine_info_phone"
                style="@style/mine_info_content_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text=""/>
        </RelativeLayout>

        <View
            style="@style/line_horizontal_common"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/mine_info_prompt_phone"
                style="@style/text_small_gray96_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:text="如需更换手机号，请联系客服 0755-86725461"/>
        </RelativeLayout>


        <View
            style="@style/line_horizontal_common"/>

        <RelativeLayout
            android:id="@+id/mine_info_bank_card_manage_rl"
            style="@style/linearlayout_item_common">

            <TextView
                style="@style/text_custom_item_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/bank_card_manage"/>

            <ImageView
                android:id="@+id/mine_info_bank_card_manage_go_right"
                style="@style/mine_sign_go_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/mine_info_bank_card_manage_content"
                style="@style/mine_info_content_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/mine_info_bank_card_manage_go_right"
                android:text="未绑定"
                android:textSize="12sp"/>
        </RelativeLayout>

        <View
            style="@style/line_horizontal_common"/>

        <RelativeLayout
            android:id="@+id/mine_info_password_manage_rl"
            style="@style/linearlayout_item_common">

            <TextView
                android:id="@+id/password_manage_field"
                style="@style/text_custom_item_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/password_manage"/>

            <ImageView
                android:id="@+id/mine_info_password_manage_go_right"
                style="@style/mine_sign_go_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/mine_info_password_manage_content"
                style="@style/mine_info_content_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/mine_info_password_manage_go_right"
                android:text="可修改"
                android:textSize="12sp"

                />
        </RelativeLayout>

        <View
            style="@style/line_horizontal_common"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"/>

        <View
            style="@style/line_horizontal_common"/>

        <RelativeLayout
            android:id="@+id/mine_info_qr_rl"
            style="@style/linearlayout_item_common">

            <TextView
                style="@style/text_custom_item_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/mine_qr"/>

            <ImageView
                android:id="@+id/mine_info_qr_go_right"
                style="@style/mine_sign_go_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"/>

            <ImageView
                style="@style/mine_info_content_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/mine_info_qr_go_right"
                android:scaleType="fitCenter"
                android:src="@drawable/img_mine_qr"
                />
        </RelativeLayout>

        <View
            style="@style/line_horizontal_common"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"/>

        <View
            style="@style/line_horizontal_common"/>

        <RelativeLayout
            android:id="@+id/msgRe"
            style="@style/linearlayout_item_common"
            android:clickable="true">

            <TextView
                style="@style/text_custom_item_commom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:text="@string/voice_switch"/>


            <ImageView
                android:id="@+id/infoIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"/>

        </RelativeLayout>

        <View
            style="@style/line_horizontal_common"/>

        <TextView
            style="@style/text_small_gray64_size_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/backgroud_common"
            android:paddingLeft="12dp"
            android:paddingTop="2dp"
            android:text="开启后,收到平台通知时您的手机将不会震动与发出提示音"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_setting_logout"
        style="@style/btn_bottom_blue_style"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:visibility="gone"
        android:text="@string/logOut"/>

</RelativeLayout>